<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/asteroid_imageview"
        android:layout_width="135dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/asteroid_name"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintLeft_toRightOf="@+id/asteroid_imageview"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/name_asteroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        android:textColor="@color/textColor"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/asteroid_diametr"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintLeft_toRightOf="@+id/asteroid_imageview"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/diametr_asteroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        android:textColor="@color/textColor"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name_asteroid"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asteroid_approach"
        android:textColor="@color/secondaryTextColor"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/asteroid_imageview"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/close_approach_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        tools:text="TextView"
        android:textColor="@color/textColor"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/diametr_asteroid"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/asteroid_velocity"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintLeft_toRightOf="@+id/asteroid_imageview"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/velocity_asteroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        tools:text="TextView"
        android:textColor="@color/textColor"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/close_approach_data"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/asteroid_distance"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintLeft_toRightOf="@+id/asteroid_imageview"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/miss_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        tools:text="TextView"
        android:textColor="@color/textColor"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/velocity_asteroid"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/asteroid_hazardous"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintLeft_toRightOf="@+id/asteroid_imageview"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/hazardous_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        android:textColor="@color/textColor"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/miss_distance"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>

    <View
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:background="@color/tw__composer_deep_gray"
        app:layout_constraintTop_toBottomOf="@+id/hazardous_view"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>