<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="apod"
            type="com.eugene.spacecenter.data.models.Apod"/>
    </data>

<ScrollView
    android:id="@+id/apod_root"
    style="@style/FullScreenView"
    android:background="@color/grey_900">

    <LinearLayout
          style="@style/FullScreenView"
          android:id="@+id/root_apod_frame"
          android:orientation="vertical"
        >

            <LinearLayout
                android:id="@+id/apod_layout"
                style="@style/FullWidthView"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/screen_edge_margin"
                android:layout_marginBottom="@dimen/screen_edge_margin">

                <RelativeLayout style="@style/FullWidthView">

                    <TextView
                        android:id="@+id/date_apod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/screen_edge_margin"
                        android:text="@{apod.date}"
                        tools:text="2016-10-25"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/secondaryTextColor"/>

                    <Button
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        style = "@style/Base.Widget.AppCompat.Button"
                        android:background="@color/category_back_2"
                        android:layout_marginEnd="@dimen/screen_edge_margin"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/screen_edge_margin"
                        android:paddingEnd="@dimen/screen_edge_margin"
                        android:layout_alignParentEnd="true"
                        android:text="@string/set_date"
                        android:textColor="@color/white"/>


                </RelativeLayout>

                <TextView
                    android:id="@+id/title_apod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/screen_edge_margin"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    tools:text="Clouds Near Jupiter's South Pole from Juno"
                    android:text="@{apod.title}"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/loading_image_indicator"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="visible"/>

                    <TextView
                        android:id="@+id/error_image_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/screen_content_margin"
                        android:text="@string/no_image_available"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_horizontal"
                        android:textColor="@color/red"
                        android:visibility="gone"/>


                    <com.github.chrisbanes.photoview.PhotoView
                        android:id="@+id/image_today_apod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/download_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_get_app_white_36dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:paddingEnd="24dp"
                        android:paddingBottom="16dp"
                        android:visibility="gone"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/explanation_apod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/screen_edge_margin"
                    android:text="@{apod.explanation}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/secondaryTextColor"
                    tools:text="What's happening near the south pole of Jupiter? Recent images sent back by NASA's robotic Juno spacecraft are showing an interesting conglomeration of swirling clouds and what appear to be white ovals. Juno arrived at Jupiter in July and is being placed into a wide, looping orbit that will bring it near the gas giant -- and over its poles -- about twice a month. The featured image is a composite taken by JunoCam and post-processed by a digitally savvy citizen scientist. White ovals have been observed elsewhere on Jupiter and are thought to be giant storm systems."/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/image_credit_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/screen_edge_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                        android:textColor="@color/secondaryTextColor"
                        android:text="@string/credit"
                        app:fieldVisibility="@{apod.copyright}"/>

                    <TextView
                        android:id="@+id/image_credit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/screen_edge_margin"
                        android:layout_marginStart="@dimen/screen_content_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                        android:textColor="@color/secondaryTextColor"
                        android:text="@{apod.copyright}"/>
                </LinearLayout>

            </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>


